# trustyx4

./: .gitignore  Cargo.toml  README.md  espflash.toml  run.sh  wokwi.toml
.cargo/: config.toml
core/: Cargo.toml
core/src/: application.rs  image_viewer.rs  lib.rs  trbk.rs
core/src/ui/: geom.rs  list_view.rs  mod.rs  text_view.rs  view.rs
desktop/: Cargo.toml
desktop/src/: display.rs  image_source.rs  main.rs
images/: Waitrose.trimg  gails.tri  waterst.tri
src/: buttons.rs  eink_display.rs  lib.rs
tools/trusty-book/src/: lib.rs
tools/trusty-epub/: Cargo.toml
tools/trusty-epub/src/: lib.rs
tools/trusty-image/: Cargo.toml
tools/trusty-image/src/: lib.rs  main.rs
x4/: Cargo.toml
x4/.cargo/: config.toml
x4/src/: eink_display.rs  image_source.rs  input.rs  main.rs  test_image.rs
