[workspace]
resolver = "3"
members = ["core", "desktop", "x4", "tools/trusty-image"]

[workspace.package]
edition      = "2024"
rust-version = "1.88"
version      = "0.1.0"

[workspace.dependencies]
log                    = "0.4.27"
embedded-graphics = "0.8.1"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
