[package]
name = "trusty-desktop"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
trusty_core = { path = "../core" }
env_logger = "0.11.8"
log.workspace = true
minifb = "0.28.0"
embedded-graphics.workspace = true
image = "0.25.9"
trusty-epub = { path = "../tools/trusty-epub" }
